# HomeWork2

./: .gitignore  .travis.yml  CMakeLists.txt  functions.cpp  functions.h  functions_test.cpp  main.cpp
